--- a/JenkinsFile
+++ b/JenkinsFile
@@ -48,9 +48,9 @@ pipeline {
                                          credentialsId: 'aws-ecr-creds'
                                  ]]) {
                     sh '''
-                        aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 612031147002.dkr.ecr.us-east-1.amazonaws.com
-                        docker tag sample-webapp:latest 612031147002.dkr.ecr.us-east-1.amazonaws.com/sample-webapp:latest
-                        docker push 612031147002.dkr.ecr.us-east-1.amazonaws.com/sample-webapp:latest
+                        aws ecr get-login-password --region eu-north-1 | docker login --username AWS --password-stdin 708791793232.dkr.ecr.eu-north-1.amazonaws.com
+                        docker tag sample-webapp:latest 708791793232.dkr.ecr.eu-north-1.amazonaws.com/sample-webapp:latest
+                        docker push 708791793232.dkr.ecr.eu-north-1.amazonaws.com/sample-webapp:latest
                        '''
 
                 }
